welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:1: error: type mismatch;
 found   : Unit
 required: Boolean
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
                                            ^